Resolve "Add enrichment stage"